[gd_scene load_steps=17 format=3 uid="uid://d3itdnmn8ah43"]

[ext_resource type="Texture2D" uid="uid://bjfl0l5bdyq5s" path="res://assets/enemy/tree_boss/tree_boss_idle.png" id="1_kjuq6"]
[ext_resource type="Script" uid="uid://bwjayd6kp0gh8" path="res://enemies/tree_boss.gd" id="1_w1ig0"]
[ext_resource type="Texture2D" uid="uid://dhlp3n8t4wtr8" path="res://assets/enemy/tree_boss/tree_boss_Walk.png" id="2_u1iyd"]
[ext_resource type="Texture2D" uid="uid://dgfw37jxm8px3" path="res://assets/enemy/tree_boss/tree_boss_attack.png" id="3_u76h0"]
[ext_resource type="Script" uid="uid://4gnydbw1e83y" path="res://Management/states/tree_boss/tree_boss_idle.gd" id="5_vdt7u"]
[ext_resource type="Script" uid="uid://c674juv1mbw5d" path="res://Management/states/tree_boss/tree_boss_move.gd" id="6_hi1ka"]
[ext_resource type="BehaviorTree" uid="uid://cv8t2m8gmhswg" path="res://Management/behaviour_trees/tree_boss/tree_boss_move_tree.tres" id="7_3ptil"]

[sub_resource type="Animation" id="Animation_u76h0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_kjuq6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_vdt7u"]
resource_name = "attack"
length = 2.08334
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_u76h0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_u1iyd"]
resource_name = "idle"
length = 2.08334
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_kjuq6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_w1ig0"]
resource_name = "walk"
length = 1.66668
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_u1iyd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1ig0"]
_data = {
&"RESET": SubResource("Animation_u76h0"),
&"attack": SubResource("Animation_vdt7u"),
&"idle": SubResource("Animation_u1iyd"),
&"walk": SubResource("Animation_w1ig0")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kjuq6"]
radius = 24.0
height = 164.0

[sub_resource type="BlackboardPlan" id="BlackboardPlan_vdt7u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ptil"]
size = Vector2(57, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hi1ka"]
size = Vector2(358, 160)

[node name="tree_boss" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 65581
script = ExtResource("1_w1ig0")
element = "earth"

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(0, -96)
texture = ExtResource("1_kjuq6")
hframes = 25
frame = 1

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w1ig0")
}

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -82)
shape = SubResource("CapsuleShape2D_kjuq6")

[node name="hsm" type="LimboHSM" parent="."]

[node name="idle" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation")]
script = ExtResource("5_vdt7u")
parent = NodePath("../..")
animation = NodePath("../../animation")

[node name="move" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation", "move_tree")]
script = ExtResource("6_hi1ka")
speed = 100.0
parent = NodePath("../..")
animation = NodePath("../../animation")
move_tree = NodePath("move")

[node name="move" type="BTPlayer" parent="hsm/move"]
behavior_tree = ExtResource("7_3ptil")
active = false
blackboard_plan = SubResource("BlackboardPlan_vdt7u")

[node name="melee_detect_area" type="Area2D" parent="."]
collision_layer = 0

[node name="melee_detect_collision" type="CollisionShape2D" parent="melee_detect_area"]
position = Vector2(-54.5, -80)
shape = SubResource("RectangleShape2D_3ptil")

[node name="ranged_detect_area" type="Area2D" parent="."]
collision_layer = 0

[node name="ranged_detect_collision" type="CollisionShape2D" parent="ranged_detect_area"]
position = Vector2(-205, -80)
shape = SubResource("RectangleShape2D_hi1ka")

[connection signal="body_entered" from="melee_detect_area" to="." method="_on_melee_detect_area_body_entered"]
[connection signal="body_exited" from="melee_detect_area" to="." method="_on_melee_detect_area_body_exited"]
[connection signal="body_entered" from="ranged_detect_area" to="." method="_on_ranged_detect_area_body_entered"]
[connection signal="body_exited" from="ranged_detect_area" to="." method="_on_ranged_detect_area_body_exited"]
